Fix crash on first startup, with clean config.

This was caused by dereferencing a 0-pointer. We should do more testing
for common cases like clean config, which are uncommon for us devs.

BUG: 262307